# space_invaders_project

./: .gitignore  .gitmodules  README.md
3ds-space-invaders/: README.md
MonoGame_SpaceInvaders-master/: README.md  UWP_SpaceInvaders.sln
docs/: ABOUT.md  PLATFORMS.md
dos_djgpp_space_invaders/: README.md  make_game.sh
dos_djgpp_space_invaders-master/: main.c  make-game.bat
dos_space_invaders-master/: README.md  main.c
dreamcast-space-invaders/: Makefile  README.md  dreamsdk_makedisc.bat  glfx.h  main.c  pvr-texture.c
dreamcast-space-invaders-master/: font.c  font.h  glfx.c  main.c  pvr-texture.c  timer.c  timer.h  vmu.xpm
emscripten-space-invaders/: Makefile  README.md  index.html  main.cpp
experimental/: README.md
experimental/psp_sdl2_space_invaders/: CMakeLists.txt  README.md  main.cpp
experimental/psvita-space-invaders/: CMakeLists.txt  README.md  libwebp.tar.xz
experimental/psvita-space-invaders/src/: main.cpp
g-eon-space-invaders-master/: README.md  main.js  meta.xml
gamemaker2_space_invaders/: README.md
gamemaker_space_invaders/: Space_Invaders_GM2.resource_order  Space_Invaders_GM2.yyp
gba_space_invaders/: BoyScout.c  BoyScout.h  make.bat  smgbalib.h  util.h
gba_space_invaders-master/: README.md  main.c
glfw3-space-invaders/: README.md  Resource.aps  glfw3_space_invaders.filters  glfw3_space_invaders.vcxproj  glfx.cpp  main.cpp
glfw3-space-invaders-master/: .gitignore  GLFW_Game.VC.db  GLFW_Game.sln  GLFW_Game.vcxproj  GLFW_Game.vcxproj.filters  README.md  Resource.rc  font.cpp  font.h  glfw3_space_invaders.sln  glfw3_space_invaders.vcxproj  glfx.cpp  glfx.h  main.cpp  stdafx.cpp
godot3_csharp_space_invaders/: API Versions - GodotSharp.url  README.md  Space Invaders CSharp.csproj  Space Invaders CSharp.sln  project.godot
godot3_space_invaders/: 2000px-Godot_(game_engine)_logo.pnpg.png.import  README.md  animDone.gd  black.png.import  blaster.ogg.import  bodenstaendig.ogg.import  bullet.gd  bullet.png.import  bullet.tscn  enemy-bullet.png.import  enemy.gd  enemy.tscn  enemy_bullet.gd  enemy_bullet.tscn  explo.gd  explo.tscn  explode.png.import  explode1.ogg.import  export.cfg  export_presets.cfg  fmg.gd  fmg.tscn  fmg_splash.png.import  gameover_ui.png.import  global.gd  godot.gd  godot.tscn  icon.png.import  invader.png.import  invader32x32x4.png.import  player.gd  score.gd  (+7 more)
godot3_space_invaders-master/: animDone.gd  bodenstaendig.ogg.import  bullet.gd  bullet.tscn  enemy.gd  enemy.tscn  enemy_bullet.tscn  explo.tscn  explode.png.import  explode1.ogg.import  fmg.gd  fmg_splash.png.import  godot.gd  godot.tscn  icon.pbm  invader32x32x4.png.import  player.gd  player.png.import  project.godot  pusher.ogg.import  space3.png.import  test.gd  vibes.inc
(+965 files in other folders)
